// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a Gallery 1`] = `
<div
  className="gallery"
>
  <div>
    <div
      className="compact base"
    >
      <button
        aria-busy={false}
        className="wrapper base hoverable clickable deleteable"
        onClick={[Function]}
        tabIndex={0}
      >
        <div
          className="thumbnail base"
        >
          <div
            className="content base"
          >
            <svg
              className="ZDlJU6tECg7ouG-b27gya _3ctOeOMP7zLhU37n25xoZC"
              data-testid="camera"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                className="_2e1AAW5-LqZd1rLcmAUuzN"
                d="M367.703 170.667c-32.322 0-61.87 18.261-76.325 47.171l-19.081 38.162h-101.631c-47.128 0-85.333 38.205-85.333 85.333v426.667c0 47.13 38.205 85.333 85.333 85.333h682.667c47.13 0 85.333-38.204 85.333-85.333v-426.667c0-47.128-38.204-85.333-85.333-85.333h-101.632l-19.081-38.162c-14.455-28.91-44.002-47.171-76.322-47.171h-288.596zM325.036 341.333l42.667-85.333h288.596l42.667 85.333h154.368v426.667h-682.667v-426.667h154.369zM682.667 554.667c0-94.255-76.412-170.667-170.667-170.667-94.257 0-170.667 76.412-170.667 170.667s76.41 170.667 170.667 170.667c94.255 0 170.667-76.412 170.667-170.667zM597.333 554.667c0 47.13-38.204 85.333-85.333 85.333s-85.333-38.204-85.333-85.333c0-47.13 38.204-85.333 85.333-85.333s85.333 38.204 85.333 85.333z"
              />
            </svg>
            <div
              className="fileName"
            >
              <span
                className="base regular text"
              >
                myballisbigandroundIamrollingitontheground.png
              </span>
            </div>
          </div>
        </div>
      </button>
      <div
        className="deleteButton"
      >
        <button
          aria-label="Delete Thumbnail"
          className="button small onlyIcon destructive tertiary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            className="ZDlJU6tECg7ouG-b27gya _isfJqqskSRqop8TStvGA"
            data-testid="trash"
            viewBox="0 0 1024 1024"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              className="_1fbz56arQt3_OOO8zZg33p"
              d="M384 469.333c0-23.565 19.103-42.667 42.667-42.667s42.667 19.102 42.667 42.667v256c0 23.565-19.102 42.667-42.667 42.667s-42.667-19.102-42.667-42.667v-256z"
            />
            <path
              className="_1fbz56arQt3_OOO8zZg33p"
              d="M597.333 426.667c-23.565 0-42.667 19.102-42.667 42.667v256c0 23.565 19.102 42.667 42.667 42.667s42.667-19.102 42.667-42.667v-256c0-23.565-19.102-42.667-42.667-42.667z"
            />
            <path
              className="_1fbz56arQt3_OOO8zZg33p"
              d="M341.333 170.667c0-23.564 19.103-42.667 42.667-42.667h256c23.565 0 42.667 19.103 42.667 42.667v85.333h128c23.565 0 42.667 19.103 42.667 42.667s-19.102 42.667-42.667 42.667h-42.667v512c0 47.13-38.204 85.333-85.333 85.333h-341.333c-47.128 0-85.333-38.204-85.333-85.333v-512h-42.667c-23.564 0-42.667-19.103-42.667-42.667s19.103-42.667 42.667-42.667h128v-85.333zM597.333 256v-42.667h-170.667v42.667h170.667zM341.333 341.333v512h341.333v-512h-341.333z"
            />
          </svg>
          <span
            className="base extraBold smaller uppercase"
          />
        </button>
      </div>
    </div>
  </div>
  <div>
    <div
      className="compact base"
    >
      <button
        aria-busy={false}
        className="wrapper base hoverable clickable deleteable"
        onClick={[Function]}
        tabIndex={0}
      >
        <div
          className="thumbnail base"
        >
          <div
            className="content base"
          >
            <svg
              className="ZDlJU6tECg7ouG-b27gya _3ctOeOMP7zLhU37n25xoZC"
              data-testid="camera"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                className="_2e1AAW5-LqZd1rLcmAUuzN"
                d="M367.703 170.667c-32.322 0-61.87 18.261-76.325 47.171l-19.081 38.162h-101.631c-47.128 0-85.333 38.205-85.333 85.333v426.667c0 47.13 38.205 85.333 85.333 85.333h682.667c47.13 0 85.333-38.204 85.333-85.333v-426.667c0-47.128-38.204-85.333-85.333-85.333h-101.632l-19.081-38.162c-14.455-28.91-44.002-47.171-76.322-47.171h-288.596zM325.036 341.333l42.667-85.333h288.596l42.667 85.333h154.368v426.667h-682.667v-426.667h154.369zM682.667 554.667c0-94.255-76.412-170.667-170.667-170.667-94.257 0-170.667 76.412-170.667 170.667s76.41 170.667 170.667 170.667c94.255 0 170.667-76.412 170.667-170.667zM597.333 554.667c0 47.13-38.204 85.333-85.333 85.333s-85.333-38.204-85.333-85.333c0-47.13 38.204-85.333 85.333-85.333s85.333 38.204 85.333 85.333z"
              />
            </svg>
            <div
              className="fileName"
            >
              <span
                className="base regular text"
              >
                iamanimage.png
              </span>
            </div>
          </div>
        </div>
      </button>
      <div
        className="deleteButton"
      >
        <button
          aria-label="Delete Thumbnail"
          className="button small onlyIcon destructive tertiary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            className="ZDlJU6tECg7ouG-b27gya _isfJqqskSRqop8TStvGA"
            data-testid="trash"
            viewBox="0 0 1024 1024"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              className="_1fbz56arQt3_OOO8zZg33p"
              d="M384 469.333c0-23.565 19.103-42.667 42.667-42.667s42.667 19.102 42.667 42.667v256c0 23.565-19.102 42.667-42.667 42.667s-42.667-19.102-42.667-42.667v-256z"
            />
            <path
              className="_1fbz56arQt3_OOO8zZg33p"
              d="M597.333 426.667c-23.565 0-42.667 19.102-42.667 42.667v256c0 23.565 19.102 42.667 42.667 42.667s42.667-19.102 42.667-42.667v-256c0-23.565-19.102-42.667-42.667-42.667z"
            />
            <path
              className="_1fbz56arQt3_OOO8zZg33p"
              d="M341.333 170.667c0-23.564 19.103-42.667 42.667-42.667h256c23.565 0 42.667 19.103 42.667 42.667v85.333h128c23.565 0 42.667 19.103 42.667 42.667s-19.102 42.667-42.667 42.667h-42.667v512c0 47.13-38.204 85.333-85.333 85.333h-341.333c-47.128 0-85.333-38.204-85.333-85.333v-512h-42.667c-23.564 0-42.667-19.103-42.667-42.667s19.103-42.667 42.667-42.667h128v-85.333zM597.333 256v-42.667h-170.667v42.667h170.667zM341.333 341.333v512h341.333v-512h-341.333z"
            />
          </svg>
          <span
            className="base extraBold smaller uppercase"
          />
        </button>
      </div>
    </div>
  </div>
  <div>
    <div
      className="compact base"
    >
      <button
        aria-busy={false}
        className="wrapper base hoverable clickable deleteable"
        onClick={[Function]}
        tabIndex={0}
      >
        <div
          className="thumbnail base"
        >
          <div
            className="content base"
          >
            <svg
              className="ZDlJU6tECg7ouG-b27gya _3ctOeOMP7zLhU37n25xoZC"
              data-testid="camera"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                className="_2e1AAW5-LqZd1rLcmAUuzN"
                d="M367.703 170.667c-32.322 0-61.87 18.261-76.325 47.171l-19.081 38.162h-101.631c-47.128 0-85.333 38.205-85.333 85.333v426.667c0 47.13 38.205 85.333 85.333 85.333h682.667c47.13 0 85.333-38.204 85.333-85.333v-426.667c0-47.128-38.204-85.333-85.333-85.333h-101.632l-19.081-38.162c-14.455-28.91-44.002-47.171-76.322-47.171h-288.596zM325.036 341.333l42.667-85.333h288.596l42.667 85.333h154.368v426.667h-682.667v-426.667h154.369zM682.667 554.667c0-94.255-76.412-170.667-170.667-170.667-94.257 0-170.667 76.412-170.667 170.667s76.41 170.667 170.667 170.667c94.255 0 170.667-76.412 170.667-170.667zM597.333 554.667c0 47.13-38.204 85.333-85.333 85.333s-85.333-38.204-85.333-85.333c0-47.13 38.204-85.333 85.333-85.333s85.333 38.204 85.333 85.333z"
              />
            </svg>
            <div
              className="fileName"
            >
              <span
                className="base regular text"
              >
                upanddown.png
              </span>
            </div>
          </div>
        </div>
      </button>
      <div
        className="deleteButton"
      >
        <button
          aria-label="Delete Thumbnail"
          className="button small onlyIcon destructive tertiary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            className="ZDlJU6tECg7ouG-b27gya _isfJqqskSRqop8TStvGA"
            data-testid="trash"
            viewBox="0 0 1024 1024"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              className="_1fbz56arQt3_OOO8zZg33p"
              d="M384 469.333c0-23.565 19.103-42.667 42.667-42.667s42.667 19.102 42.667 42.667v256c0 23.565-19.102 42.667-42.667 42.667s-42.667-19.102-42.667-42.667v-256z"
            />
            <path
              className="_1fbz56arQt3_OOO8zZg33p"
              d="M597.333 426.667c-23.565 0-42.667 19.102-42.667 42.667v256c0 23.565 19.102 42.667 42.667 42.667s42.667-19.102 42.667-42.667v-256c0-23.565-19.102-42.667-42.667-42.667z"
            />
            <path
              className="_1fbz56arQt3_OOO8zZg33p"
              d="M341.333 170.667c0-23.564 19.103-42.667 42.667-42.667h256c23.565 0 42.667 19.103 42.667 42.667v85.333h128c23.565 0 42.667 19.103 42.667 42.667s-19.102 42.667-42.667 42.667h-42.667v512c0 47.13-38.204 85.333-85.333 85.333h-341.333c-47.128 0-85.333-38.204-85.333-85.333v-512h-42.667c-23.564 0-42.667-19.103-42.667-42.667s19.103-42.667 42.667-42.667h128v-85.333zM597.333 256v-42.667h-170.667v42.667h170.667zM341.333 341.333v512h341.333v-512h-341.333z"
            />
          </svg>
          <span
            className="base extraBold smaller uppercase"
          />
        </button>
      </div>
    </div>
  </div>
  <div>
    <div
      className="compact base"
    >
      <button
        aria-busy={false}
        className="wrapper base hoverable clickable deleteable"
        onClick={[Function]}
        tabIndex={0}
      >
        <div
          className="thumbnail base"
        >
          <div
            className="content base"
          >
            <svg
              className="ZDlJU6tECg7ouG-b27gya _3ctOeOMP7zLhU37n25xoZC"
              data-testid="camera"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                className="_2e1AAW5-LqZd1rLcmAUuzN"
                d="M367.703 170.667c-32.322 0-61.87 18.261-76.325 47.171l-19.081 38.162h-101.631c-47.128 0-85.333 38.205-85.333 85.333v426.667c0 47.13 38.205 85.333 85.333 85.333h682.667c47.13 0 85.333-38.204 85.333-85.333v-426.667c0-47.128-38.204-85.333-85.333-85.333h-101.632l-19.081-38.162c-14.455-28.91-44.002-47.171-76.322-47.171h-288.596zM325.036 341.333l42.667-85.333h288.596l42.667 85.333h154.368v426.667h-682.667v-426.667h154.369zM682.667 554.667c0-94.255-76.412-170.667-170.667-170.667-94.257 0-170.667 76.412-170.667 170.667s76.41 170.667 170.667 170.667c94.255 0 170.667-76.412 170.667-170.667zM597.333 554.667c0 47.13-38.204 85.333-85.333 85.333s-85.333-38.204-85.333-85.333c0-47.13 38.204-85.333 85.333-85.333s85.333 38.204 85.333 85.333z"
              />
            </svg>
            <div
              className="fileName"
            >
              <span
                className="base regular text"
              >
                kramer.png
              </span>
            </div>
          </div>
        </div>
      </button>
      <div
        className="deleteButton"
      >
        <button
          aria-label="Delete Thumbnail"
          className="button small onlyIcon destructive tertiary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            className="ZDlJU6tECg7ouG-b27gya _isfJqqskSRqop8TStvGA"
            data-testid="trash"
            viewBox="0 0 1024 1024"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              className="_1fbz56arQt3_OOO8zZg33p"
              d="M384 469.333c0-23.565 19.103-42.667 42.667-42.667s42.667 19.102 42.667 42.667v256c0 23.565-19.102 42.667-42.667 42.667s-42.667-19.102-42.667-42.667v-256z"
            />
            <path
              className="_1fbz56arQt3_OOO8zZg33p"
              d="M597.333 426.667c-23.565 0-42.667 19.102-42.667 42.667v256c0 23.565 19.102 42.667 42.667 42.667s42.667-19.102 42.667-42.667v-256c0-23.565-19.102-42.667-42.667-42.667z"
            />
            <path
              className="_1fbz56arQt3_OOO8zZg33p"
              d="M341.333 170.667c0-23.564 19.103-42.667 42.667-42.667h256c23.565 0 42.667 19.103 42.667 42.667v85.333h128c23.565 0 42.667 19.103 42.667 42.667s-19.102 42.667-42.667 42.667h-42.667v512c0 47.13-38.204 85.333-85.333 85.333h-341.333c-47.128 0-85.333-38.204-85.333-85.333v-512h-42.667c-23.564 0-42.667-19.103-42.667-42.667s19.103-42.667 42.667-42.667h128v-85.333zM597.333 256v-42.667h-170.667v42.667h170.667zM341.333 341.333v512h341.333v-512h-341.333z"
            />
          </svg>
          <span
            className="base extraBold smaller uppercase"
          />
        </button>
      </div>
    </div>
  </div>
  <div>
    <div
      className="compact base"
    >
      <button
        aria-busy={false}
        className="wrapper base hoverable clickable deleteable"
        onClick={[Function]}
        tabIndex={0}
      >
        <div
          className="thumbnail base"
        >
          <div
            className="content base"
          >
            <svg
              className="ZDlJU6tECg7ouG-b27gya _3ctOeOMP7zLhU37n25xoZC"
              data-testid="camera"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                className="_2e1AAW5-LqZd1rLcmAUuzN"
                d="M367.703 170.667c-32.322 0-61.87 18.261-76.325 47.171l-19.081 38.162h-101.631c-47.128 0-85.333 38.205-85.333 85.333v426.667c0 47.13 38.205 85.333 85.333 85.333h682.667c47.13 0 85.333-38.204 85.333-85.333v-426.667c0-47.128-38.204-85.333-85.333-85.333h-101.632l-19.081-38.162c-14.455-28.91-44.002-47.171-76.322-47.171h-288.596zM325.036 341.333l42.667-85.333h288.596l42.667 85.333h154.368v426.667h-682.667v-426.667h154.369zM682.667 554.667c0-94.255-76.412-170.667-170.667-170.667-94.257 0-170.667 76.412-170.667 170.667s76.41 170.667 170.667 170.667c94.255 0 170.667-76.412 170.667-170.667zM597.333 554.667c0 47.13-38.204 85.333-85.333 85.333s-85.333-38.204-85.333-85.333c0-47.13 38.204-85.333 85.333-85.333s85.333 38.204 85.333 85.333z"
              />
            </svg>
            <div
              className="fileName"
            >
              <span
                className="base regular text"
              >
                boston.png
              </span>
            </div>
          </div>
        </div>
      </button>
      <div
        className="deleteButton"
      >
        <button
          aria-label="Delete Thumbnail"
          className="button small onlyIcon destructive tertiary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            className="ZDlJU6tECg7ouG-b27gya _isfJqqskSRqop8TStvGA"
            data-testid="trash"
            viewBox="0 0 1024 1024"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              className="_1fbz56arQt3_OOO8zZg33p"
              d="M384 469.333c0-23.565 19.103-42.667 42.667-42.667s42.667 19.102 42.667 42.667v256c0 23.565-19.102 42.667-42.667 42.667s-42.667-19.102-42.667-42.667v-256z"
            />
            <path
              className="_1fbz56arQt3_OOO8zZg33p"
              d="M597.333 426.667c-23.565 0-42.667 19.102-42.667 42.667v256c0 23.565 19.102 42.667 42.667 42.667s42.667-19.102 42.667-42.667v-256c0-23.565-19.102-42.667-42.667-42.667z"
            />
            <path
              className="_1fbz56arQt3_OOO8zZg33p"
              d="M341.333 170.667c0-23.564 19.103-42.667 42.667-42.667h256c23.565 0 42.667 19.103 42.667 42.667v85.333h128c23.565 0 42.667 19.103 42.667 42.667s-19.102 42.667-42.667 42.667h-42.667v512c0 47.13-38.204 85.333-85.333 85.333h-341.333c-47.128 0-85.333-38.204-85.333-85.333v-512h-42.667c-23.564 0-42.667-19.103-42.667-42.667s19.103-42.667 42.667-42.667h128v-85.333zM597.333 256v-42.667h-170.667v42.667h170.667zM341.333 341.333v512h341.333v-512h-341.333z"
            />
          </svg>
          <span
            className="base extraBold smaller uppercase"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`when the gallery is large displays large thumbnails 1`] = `
<div
  className="galleryLarge"
>
  <div>
    <div
      className="compact large"
    >
      <button
        aria-busy={false}
        className="wrapper large hoverable clickable deleteable"
        onClick={[Function]}
        tabIndex={0}
      >
        <div
          className="thumbnail large"
        >
          <div
            className="content large"
          >
            <svg
              className="ZDlJU6tECg7ouG-b27gya _3ctOeOMP7zLhU37n25xoZC"
              data-testid="camera"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                className="_2e1AAW5-LqZd1rLcmAUuzN"
                d="M367.703 170.667c-32.322 0-61.87 18.261-76.325 47.171l-19.081 38.162h-101.631c-47.128 0-85.333 38.205-85.333 85.333v426.667c0 47.13 38.205 85.333 85.333 85.333h682.667c47.13 0 85.333-38.204 85.333-85.333v-426.667c0-47.128-38.204-85.333-85.333-85.333h-101.632l-19.081-38.162c-14.455-28.91-44.002-47.171-76.322-47.171h-288.596zM325.036 341.333l42.667-85.333h288.596l42.667 85.333h154.368v426.667h-682.667v-426.667h154.369zM682.667 554.667c0-94.255-76.412-170.667-170.667-170.667-94.257 0-170.667 76.412-170.667 170.667s76.41 170.667 170.667 170.667c94.255 0 170.667-76.412 170.667-170.667zM597.333 554.667c0 47.13-38.204 85.333-85.333 85.333s-85.333-38.204-85.333-85.333c0-47.13 38.204-85.333 85.333-85.333s85.333 38.204 85.333 85.333z"
              />
            </svg>
            <div
              className="fileName"
            >
              <span
                className="base regular text"
              >
                myballisbigandroundIamrollingitontheground.png
              </span>
            </div>
          </div>
        </div>
      </button>
      <div
        className="deleteButton"
      >
        <button
          aria-label="Delete Thumbnail"
          className="button base onlyIcon destructive tertiary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            className="ZDlJU6tECg7ouG-b27gya _3ctOeOMP7zLhU37n25xoZC"
            data-testid="trash"
            viewBox="0 0 1024 1024"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              className="_1fbz56arQt3_OOO8zZg33p"
              d="M384 469.333c0-23.565 19.103-42.667 42.667-42.667s42.667 19.102 42.667 42.667v256c0 23.565-19.102 42.667-42.667 42.667s-42.667-19.102-42.667-42.667v-256z"
            />
            <path
              className="_1fbz56arQt3_OOO8zZg33p"
              d="M597.333 426.667c-23.565 0-42.667 19.102-42.667 42.667v256c0 23.565 19.102 42.667 42.667 42.667s42.667-19.102 42.667-42.667v-256c0-23.565-19.102-42.667-42.667-42.667z"
            />
            <path
              className="_1fbz56arQt3_OOO8zZg33p"
              d="M341.333 170.667c0-23.564 19.103-42.667 42.667-42.667h256c23.565 0 42.667 19.103 42.667 42.667v85.333h128c23.565 0 42.667 19.103 42.667 42.667s-19.102 42.667-42.667 42.667h-42.667v512c0 47.13-38.204 85.333-85.333 85.333h-341.333c-47.128 0-85.333-38.204-85.333-85.333v-512h-42.667c-23.564 0-42.667-19.103-42.667-42.667s19.103-42.667 42.667-42.667h128v-85.333zM597.333 256v-42.667h-170.667v42.667h170.667zM341.333 341.333v512h341.333v-512h-341.333z"
            />
          </svg>
          <span
            className="base extraBold small uppercase"
          />
        </button>
      </div>
    </div>
  </div>
  <div>
    <div
      className="compact large"
    >
      <button
        aria-busy={false}
        className="wrapper large hoverable clickable deleteable"
        onClick={[Function]}
        tabIndex={0}
      >
        <div
          className="thumbnail large"
        >
          <div
            className="content large"
          >
            <svg
              className="ZDlJU6tECg7ouG-b27gya _3ctOeOMP7zLhU37n25xoZC"
              data-testid="camera"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                className="_2e1AAW5-LqZd1rLcmAUuzN"
                d="M367.703 170.667c-32.322 0-61.87 18.261-76.325 47.171l-19.081 38.162h-101.631c-47.128 0-85.333 38.205-85.333 85.333v426.667c0 47.13 38.205 85.333 85.333 85.333h682.667c47.13 0 85.333-38.204 85.333-85.333v-426.667c0-47.128-38.204-85.333-85.333-85.333h-101.632l-19.081-38.162c-14.455-28.91-44.002-47.171-76.322-47.171h-288.596zM325.036 341.333l42.667-85.333h288.596l42.667 85.333h154.368v426.667h-682.667v-426.667h154.369zM682.667 554.667c0-94.255-76.412-170.667-170.667-170.667-94.257 0-170.667 76.412-170.667 170.667s76.41 170.667 170.667 170.667c94.255 0 170.667-76.412 170.667-170.667zM597.333 554.667c0 47.13-38.204 85.333-85.333 85.333s-85.333-38.204-85.333-85.333c0-47.13 38.204-85.333 85.333-85.333s85.333 38.204 85.333 85.333z"
              />
            </svg>
            <div
              className="fileName"
            >
              <span
                className="base regular text"
              >
                iamanimage.png
              </span>
            </div>
          </div>
        </div>
      </button>
      <div
        className="deleteButton"
      >
        <button
          aria-label="Delete Thumbnail"
          className="button base onlyIcon destructive tertiary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            className="ZDlJU6tECg7ouG-b27gya _3ctOeOMP7zLhU37n25xoZC"
            data-testid="trash"
            viewBox="0 0 1024 1024"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              className="_1fbz56arQt3_OOO8zZg33p"
              d="M384 469.333c0-23.565 19.103-42.667 42.667-42.667s42.667 19.102 42.667 42.667v256c0 23.565-19.102 42.667-42.667 42.667s-42.667-19.102-42.667-42.667v-256z"
            />
            <path
              className="_1fbz56arQt3_OOO8zZg33p"
              d="M597.333 426.667c-23.565 0-42.667 19.102-42.667 42.667v256c0 23.565 19.102 42.667 42.667 42.667s42.667-19.102 42.667-42.667v-256c0-23.565-19.102-42.667-42.667-42.667z"
            />
            <path
              className="_1fbz56arQt3_OOO8zZg33p"
              d="M341.333 170.667c0-23.564 19.103-42.667 42.667-42.667h256c23.565 0 42.667 19.103 42.667 42.667v85.333h128c23.565 0 42.667 19.103 42.667 42.667s-19.102 42.667-42.667 42.667h-42.667v512c0 47.13-38.204 85.333-85.333 85.333h-341.333c-47.128 0-85.333-38.204-85.333-85.333v-512h-42.667c-23.564 0-42.667-19.103-42.667-42.667s19.103-42.667 42.667-42.667h128v-85.333zM597.333 256v-42.667h-170.667v42.667h170.667zM341.333 341.333v512h341.333v-512h-341.333z"
            />
          </svg>
          <span
            className="base extraBold small uppercase"
          />
        </button>
      </div>
    </div>
  </div>
  <div>
    <div
      className="compact large"
    >
      <button
        aria-busy={false}
        className="wrapper large hoverable clickable deleteable"
        onClick={[Function]}
        tabIndex={0}
      >
        <div
          className="thumbnail large"
        >
          <div
            className="content large"
          >
            <svg
              className="ZDlJU6tECg7ouG-b27gya _3ctOeOMP7zLhU37n25xoZC"
              data-testid="camera"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                className="_2e1AAW5-LqZd1rLcmAUuzN"
                d="M367.703 170.667c-32.322 0-61.87 18.261-76.325 47.171l-19.081 38.162h-101.631c-47.128 0-85.333 38.205-85.333 85.333v426.667c0 47.13 38.205 85.333 85.333 85.333h682.667c47.13 0 85.333-38.204 85.333-85.333v-426.667c0-47.128-38.204-85.333-85.333-85.333h-101.632l-19.081-38.162c-14.455-28.91-44.002-47.171-76.322-47.171h-288.596zM325.036 341.333l42.667-85.333h288.596l42.667 85.333h154.368v426.667h-682.667v-426.667h154.369zM682.667 554.667c0-94.255-76.412-170.667-170.667-170.667-94.257 0-170.667 76.412-170.667 170.667s76.41 170.667 170.667 170.667c94.255 0 170.667-76.412 170.667-170.667zM597.333 554.667c0 47.13-38.204 85.333-85.333 85.333s-85.333-38.204-85.333-85.333c0-47.13 38.204-85.333 85.333-85.333s85.333 38.204 85.333 85.333z"
              />
            </svg>
            <div
              className="fileName"
            >
              <span
                className="base regular text"
              >
                upanddown.png
              </span>
            </div>
          </div>
        </div>
      </button>
      <div
        className="deleteButton"
      >
        <button
          aria-label="Delete Thumbnail"
          className="button base onlyIcon destructive tertiary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            className="ZDlJU6tECg7ouG-b27gya _3ctOeOMP7zLhU37n25xoZC"
            data-testid="trash"
            viewBox="0 0 1024 1024"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              className="_1fbz56arQt3_OOO8zZg33p"
              d="M384 469.333c0-23.565 19.103-42.667 42.667-42.667s42.667 19.102 42.667 42.667v256c0 23.565-19.102 42.667-42.667 42.667s-42.667-19.102-42.667-42.667v-256z"
            />
            <path
              className="_1fbz56arQt3_OOO8zZg33p"
              d="M597.333 426.667c-23.565 0-42.667 19.102-42.667 42.667v256c0 23.565 19.102 42.667 42.667 42.667s42.667-19.102 42.667-42.667v-256c0-23.565-19.102-42.667-42.667-42.667z"
            />
            <path
              className="_1fbz56arQt3_OOO8zZg33p"
              d="M341.333 170.667c0-23.564 19.103-42.667 42.667-42.667h256c23.565 0 42.667 19.103 42.667 42.667v85.333h128c23.565 0 42.667 19.103 42.667 42.667s-19.102 42.667-42.667 42.667h-42.667v512c0 47.13-38.204 85.333-85.333 85.333h-341.333c-47.128 0-85.333-38.204-85.333-85.333v-512h-42.667c-23.564 0-42.667-19.103-42.667-42.667s19.103-42.667 42.667-42.667h128v-85.333zM597.333 256v-42.667h-170.667v42.667h170.667zM341.333 341.333v512h341.333v-512h-341.333z"
            />
          </svg>
          <span
            className="base extraBold small uppercase"
          />
        </button>
      </div>
    </div>
  </div>
  <div>
    <div
      className="compact large"
    >
      <button
        aria-busy={false}
        className="wrapper large hoverable clickable deleteable"
        onClick={[Function]}
        tabIndex={0}
      >
        <div
          className="thumbnail large"
        >
          <div
            className="content large"
          >
            <svg
              className="ZDlJU6tECg7ouG-b27gya _3ctOeOMP7zLhU37n25xoZC"
              data-testid="camera"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                className="_2e1AAW5-LqZd1rLcmAUuzN"
                d="M367.703 170.667c-32.322 0-61.87 18.261-76.325 47.171l-19.081 38.162h-101.631c-47.128 0-85.333 38.205-85.333 85.333v426.667c0 47.13 38.205 85.333 85.333 85.333h682.667c47.13 0 85.333-38.204 85.333-85.333v-426.667c0-47.128-38.204-85.333-85.333-85.333h-101.632l-19.081-38.162c-14.455-28.91-44.002-47.171-76.322-47.171h-288.596zM325.036 341.333l42.667-85.333h288.596l42.667 85.333h154.368v426.667h-682.667v-426.667h154.369zM682.667 554.667c0-94.255-76.412-170.667-170.667-170.667-94.257 0-170.667 76.412-170.667 170.667s76.41 170.667 170.667 170.667c94.255 0 170.667-76.412 170.667-170.667zM597.333 554.667c0 47.13-38.204 85.333-85.333 85.333s-85.333-38.204-85.333-85.333c0-47.13 38.204-85.333 85.333-85.333s85.333 38.204 85.333 85.333z"
              />
            </svg>
            <div
              className="fileName"
            >
              <span
                className="base regular text"
              >
                kramer.png
              </span>
            </div>
          </div>
        </div>
      </button>
      <div
        className="deleteButton"
      >
        <button
          aria-label="Delete Thumbnail"
          className="button base onlyIcon destructive tertiary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            className="ZDlJU6tECg7ouG-b27gya _3ctOeOMP7zLhU37n25xoZC"
            data-testid="trash"
            viewBox="0 0 1024 1024"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              className="_1fbz56arQt3_OOO8zZg33p"
              d="M384 469.333c0-23.565 19.103-42.667 42.667-42.667s42.667 19.102 42.667 42.667v256c0 23.565-19.102 42.667-42.667 42.667s-42.667-19.102-42.667-42.667v-256z"
            />
            <path
              className="_1fbz56arQt3_OOO8zZg33p"
              d="M597.333 426.667c-23.565 0-42.667 19.102-42.667 42.667v256c0 23.565 19.102 42.667 42.667 42.667s42.667-19.102 42.667-42.667v-256c0-23.565-19.102-42.667-42.667-42.667z"
            />
            <path
              className="_1fbz56arQt3_OOO8zZg33p"
              d="M341.333 170.667c0-23.564 19.103-42.667 42.667-42.667h256c23.565 0 42.667 19.103 42.667 42.667v85.333h128c23.565 0 42.667 19.103 42.667 42.667s-19.102 42.667-42.667 42.667h-42.667v512c0 47.13-38.204 85.333-85.333 85.333h-341.333c-47.128 0-85.333-38.204-85.333-85.333v-512h-42.667c-23.564 0-42.667-19.103-42.667-42.667s19.103-42.667 42.667-42.667h128v-85.333zM597.333 256v-42.667h-170.667v42.667h170.667zM341.333 341.333v512h341.333v-512h-341.333z"
            />
          </svg>
          <span
            className="base extraBold small uppercase"
          />
        </button>
      </div>
    </div>
  </div>
  <div>
    <div
      className="compact large"
    >
      <button
        aria-busy={false}
        className="wrapper large hoverable clickable deleteable"
        onClick={[Function]}
        tabIndex={0}
      >
        <div
          className="thumbnail large"
        >
          <div
            className="content large"
          >
            <svg
              className="ZDlJU6tECg7ouG-b27gya _3ctOeOMP7zLhU37n25xoZC"
              data-testid="camera"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                className="_2e1AAW5-LqZd1rLcmAUuzN"
                d="M367.703 170.667c-32.322 0-61.87 18.261-76.325 47.171l-19.081 38.162h-101.631c-47.128 0-85.333 38.205-85.333 85.333v426.667c0 47.13 38.205 85.333 85.333 85.333h682.667c47.13 0 85.333-38.204 85.333-85.333v-426.667c0-47.128-38.204-85.333-85.333-85.333h-101.632l-19.081-38.162c-14.455-28.91-44.002-47.171-76.322-47.171h-288.596zM325.036 341.333l42.667-85.333h288.596l42.667 85.333h154.368v426.667h-682.667v-426.667h154.369zM682.667 554.667c0-94.255-76.412-170.667-170.667-170.667-94.257 0-170.667 76.412-170.667 170.667s76.41 170.667 170.667 170.667c94.255 0 170.667-76.412 170.667-170.667zM597.333 554.667c0 47.13-38.204 85.333-85.333 85.333s-85.333-38.204-85.333-85.333c0-47.13 38.204-85.333 85.333-85.333s85.333 38.204 85.333 85.333z"
              />
            </svg>
            <div
              className="fileName"
            >
              <span
                className="base regular text"
              >
                boston.png
              </span>
            </div>
          </div>
        </div>
      </button>
      <div
        className="deleteButton"
      >
        <button
          aria-label="Delete Thumbnail"
          className="button base onlyIcon destructive tertiary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            className="ZDlJU6tECg7ouG-b27gya _3ctOeOMP7zLhU37n25xoZC"
            data-testid="trash"
            viewBox="0 0 1024 1024"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              className="_1fbz56arQt3_OOO8zZg33p"
              d="M384 469.333c0-23.565 19.103-42.667 42.667-42.667s42.667 19.102 42.667 42.667v256c0 23.565-19.102 42.667-42.667 42.667s-42.667-19.102-42.667-42.667v-256z"
            />
            <path
              className="_1fbz56arQt3_OOO8zZg33p"
              d="M597.333 426.667c-23.565 0-42.667 19.102-42.667 42.667v256c0 23.565 19.102 42.667 42.667 42.667s42.667-19.102 42.667-42.667v-256c0-23.565-19.102-42.667-42.667-42.667z"
            />
            <path
              className="_1fbz56arQt3_OOO8zZg33p"
              d="M341.333 170.667c0-23.564 19.103-42.667 42.667-42.667h256c23.565 0 42.667 19.103 42.667 42.667v85.333h128c23.565 0 42.667 19.103 42.667 42.667s-19.102 42.667-42.667 42.667h-42.667v512c0 47.13-38.204 85.333-85.333 85.333h-341.333c-47.128 0-85.333-38.204-85.333-85.333v-512h-42.667c-23.564 0-42.667-19.103-42.667-42.667s19.103-42.667 42.667-42.667h128v-85.333zM597.333 256v-42.667h-170.667v42.667h170.667zM341.333 341.333v512h341.333v-512h-341.333z"
            />
          </svg>
          <span
            className="base extraBold small uppercase"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
